@@ -5,28 +5,36 @@ import java.util.stream.Collectors;
 
 public class GameServerAnalytics {
 
+
     public static List<String> findTopNUsernamesByRating(Collection<PlayerAccount> players, int n) {
-        // TODO: use a stream pipeline
-        return players.stream().sorted(Comparator.comparingInt(PlayerAccount::rating).reversed())
-                .limit(n).map(PlayerAccount::username).toList();
+
+        return players.stream()
+                .sorted(Comparator.comparingInt(PlayerAccount::rating).reversed())
+                .limit(n)
+                .map(PlayerAccount::username)
+                .collect(Collectors.toList());
     }
 
     public static Map<String, Double> averageRatingByRegion(Collection<PlayerAccount> players) {
-        // TODO: use groupingBy + averagingInt
-        return players.stream().collect(Collectors.groupingBy(
-                PlayerAccount::region,
-                Collectors.averagingInt(PlayerAccount::rating)
+
+        return players.stream()
+                .collect(Collectors.groupingBy(
+                        PlayerAccount::region,
+                        Collectors.averagingInt(PlayerAccount::rating)
                 ));
     }
 
+
     public static Set<String> findDuplicateUsernames(Collection<PlayerAccount> players) {
-        // TODO: use collections and/or streams
+
         Set<String> seen = new HashSet<>();
         Set<String> duplicates = new HashSet<>();
 
         for (PlayerAccount p : players) {
-            if (!seen.add(p.username())) {
-                duplicates.add(p.username());
+            String username = p.username();
+
+            if (!seen.add(username)) {
+                duplicates.add(username);
             }
         }
 
@@ -34,36 +42,41 @@ public class GameServerAnalytics {
     }
 
     public static Map<String, List<String>> groupUsernamesByTier(Collection<PlayerAccount> players) {
-        // TODO: use groupingBy and mapping
-        return players.stream().collect(Collectors.groupingBy(
+
+        return players.stream()
+                .collect(Collectors.groupingBy(
                         GameServerAnalytics::tierFor,
                         Collectors.mapping(PlayerAccount::username, Collectors.toList())
                 ));
     }
 
     public static Map<String, List<String>> buildRecentMatchSummariesByPlayer(Collection<MatchRecord> matches) {
-        // TODO: use a Map + collection logic or a stream-based approach
+
         Map<String, List<String>> result = new HashMap<>();
 
-        for (MatchRecord m : matches) {
+        for (MatchRecord match : matches) {
 
-            result.computeIfAbsent(m.playerOne().username(), k ->
-                    new ArrayList<>()).add(m.summary());
+            String summary = match.summary();
 
-            result.computeIfAbsent(m.playerTwo().username(), k ->
-                    new ArrayList<>()).add(m.summary());
+            result.computeIfAbsent(match.playerOne().username(), k -> new ArrayList<>())
+                    .add(summary);
+
+            result.computeIfAbsent(match.playerTwo().username(), k -> new ArrayList<>())
+                    .add(summary);
         }
 
         return result;
     }
 
     public static <T> T pickHigherRated(T first, T second, Comparator<T> comparator) {
-        // TODO: implement using the comparator
         return comparator.compare(first, second) >= 0 ? first : second;
     }
+
     public static String tierFor(PlayerAccount player) {
+
         if (player.rating() < 1000) return "Bronze";
         if (player.rating() < 1400) return "Silver";
+
         return "Gold";
     }
 }
